# add-subtitles-to-videos

./: .gitignore  README.md  conftest.py  launch-subtitle-foundry.vbs  pyproject.toml
docs/superpowers/plans/: 2026-04-10-transcript-review-panel.md  2026-04-12-transcription-speed-core.md  2026-04-13-post-approval-srt-editing.md
docs/superpowers/specs/: 2026-04-10-transcript-review-panel-design.md  2026-04-12-transcription-speed-features-design.md  2026-04-13-post-approval-srt-editing-design.md
packaging/windows/: subtitle_foundry.iss  subtitle_foundry.spec
scripts/: build_windows_bundle.ps1  build_windows_installer.ps1  generate_branding_assets.py  generate_ui_screenshots.py  install_windows_cuda_torch.ps1  launch_windows_outside_venv.ps1
src/add_subtitles_to_videos/: __main__.py  app.py  config.py  languages.py  main.py  models.py
src/add_subtitles_to_videos/services/: __init__.py  ffmpeg.py  gpu.py  pipeline.py  power.py  subtitles.py  translation.py  whisper.py  whisper_worker.py  worker_pool.py
src/add_subtitles_to_videos/ui/: main_window.py  theme.py
tests/: test_config.py  test_models.py  test_subtitles.py  test_worker_pool.py
